alteração em estilos e adição de botao para adicionar legenda

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">   
 </head>
 <body>
-<h1>Mapa Deposito Defensivos</h2>
+<h1 id="titulo">Mapa Deposito Defensivos</h2>
 
 <section id="deposito">
 
@@ -36,8 +36,22 @@
 <div id="p4topo" ><p class="cabecalhos">Topo</p></div>
 </div>
 
+<div id="ld">
+<div class="inputBotao">
 <input placeholder="Endereço" id="input"></input>
 <button onClick="localizar()">Localizar</button> 
+</div>
+
+<div class="inputBotao">
+<input placeholder="Inserir Legenda" id="input2"></input>
+<button onClick="legendar()">Inserir</button> 
+</div>
+
+
+
+</div>
+
+
 </section>
 <br>
 
